Bug#42543 ndb_mgmd can't handle configuration larger then 32k  - Patch 1, error handling.  - Don't continue configuration change protocol unless    signal for "prepare" has been sent to all ndb_mgmd's  - Print error message and exit if ndb_mgmd is starting up.  - Send ConfigChangeRef to requestor if ndb_mgmd is running